Update to 1.21 (#837)
* Add support for 1.21.

* Update build script.

* Update Dependencies

* Fix /clear check.

* Prevent Ally Bees from being able to use bee hives.

* Option - Disable SlotCrystal.

* Add a config option to disable the effect of slot crystals.

---------

Co-authored-by: TrueDarkLord <truedarklord.email@gmail.com>